@@ -7,55 +7,53 @@ import io.lalahtalks.secrets.server.domain.AccountId;
 import io.lalahtalks.secrets.server.domain.secret.Secret;
 import io.lalahtalks.secrets.server.domain.secret.SecretId;
 import io.lalahtalks.secrets.server.domain.secret.SecretRepository;
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
-@RequiredArgsConstructor
 public class JpaSecretRepository implements SecretRepository {
 
-    private final SecretEntityMapper secretEntityMapper;
-    private final SecretEntityRepository secretEntityRepository;
+    private final SecretJpaDtoMapper secretJpaDtoMapper;
+    private final SecretDao secretDao;
+
+    public JpaSecretRepository(SecretJpaDtoMapper secretJpaDtoMapper, SecretDao secretDao) {
+        this.secretJpaDtoMapper = secretJpaDtoMapper;
+        this.secretDao = secretDao;
+    }
 
     @Override
     public Page<Secret> find(AccountId accountId, PageRequest request) {
-        var offset = request.getPageNumber() * request.getPageSize();
-        var totalElements = secretEntityRepository.countByAccountId(accountId.getValue());
+        var offset = request.pageNumber() * request.pageSize();
+        var totalElements = secretDao.countByAccountId(accountId.value());
         var totalPages = totalElements != 0
-                ? ((int) totalElements / request.getPageSize()) + 1
+                ? ((int) totalElements / request.pageSize()) + 1
                 : 0;
-        var entities = secretEntityRepository.findAllByAccountIdAndPageRequest(
-                accountId.getValue(),
-                request.getPageSize(),
+        var entities = secretDao.findAllByAccountIdAndPageRequest(
+                accountId.value(),
+                request.pageSize(),
                 offset);
         var elements = entities.stream()
-                .map(secretEntityMapper::fromEntity)
-                .collect(Collectors.toList());
-        var paging = Paging.builder()
-                .number(request.getPageNumber())
-                .size(request.getPageSize())
-                .totalElements(totalElements)
-                .totalPages(totalPages)
-                .build();
-        return Page.<Secret>builder()
-                .paging(paging)
-                .elements(elements)
-                .build();
+                .map(secretJpaDtoMapper::from)
+                .toList();
+        var paging = new Paging(
+                request.pageNumber(),
+                request.pageSize(),
+                totalElements,
+                totalPages);
+        return new Page<>(paging, elements);
     }
 
     @Override
     public Optional<Secret> find(SecretId secretId) {
-        return secretEntityRepository.findById(secretId.getValue())
-                .map(secretEntityMapper::fromEntity);
+        return secretDao.findById(secretId.value())
+                .map(secretJpaDtoMapper::from);
     }
 
     @Override
     public void save(Secret secret) {
-        var entity = secretEntityMapper.toEntity(secret);
-        secretEntityRepository.save(entity);
+        var dto = secretJpaDtoMapper.to(secret);
+        secretDao.save(dto);
     }
 
 }
